# app-manager

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: clients-agent.md  config-agent.md  db-agent.md  generation-agent.md  server-api-agent.md  server-domain-agent.md  ui-agent.md
.claude/commands/: add-endpoint.md  chrome-extension.md  restart.md  start.md  stop.md  test.md  update-knowledge.md
.claude/knowledge/: chrome-extension.md  clients.md  config.md  db.md  generation.md  server-api.md  server-ui.md
extensions/chrome/: manifest.json  popup.css  popup.html  popup.js
jam/: config.py  db.py  generation.py  gmail_client.py  html_page.py  kb_client.py  llm.py  msgraph_client.py  server.py
scripts/: serve.py
tests/: conftest.py
tests/integration/: test_browser.py  test_generation_kb_integration.py  test_llm_integration.py  test_server_integration.py
tests/unit/: test_config.py  test_db.py  test_fetch_page_text.py  test_generation.py  test_generation_prep_guide.py  test_gmail_client.py  test_kb_client.py  test_llm.py  test_msgraph_client.py  test_server.py
