[project]
name = "job-application-manager"
version = "0.1.0"
description = "Job application manager — downstream app for the kb knowledge base"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "playwright>=1.58.0",
    "pymupdf>=1.24",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]
